Closed Bug 1325733 Opened 7 years ago Closed 7 years ago

Failures in 2.0.0/deqp/functional/gles3/framebufferblit/default_framebuffer*

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

(Whiteboard: gfx-noted)

Attachments

(2 files)

      No description provided.
Whiteboard: gfx-noted
Depends on: 1312865
Comment on attachment 8821705 [details]
Bug 1325733 - Mark read/draw calls better. -

https://reviewboard.mozilla.org/r/100878/#review101558
Attachment #8821705 - Flags: review?(dmu) → review+
Comment on attachment 8821706 [details]
Bug 1325733 - ANGLE needs to call clear twice even on larger targets. -

https://reviewboard.mozilla.org/r/100880/#review101560
Attachment #8821706 - Flags: review?(dmu) → review+
(In reply to Daosheng Mu[:daoshengmu] from comment #5)
> Comment on attachment 8821706 [details]
> Bug 1325733 - ANGLE needs to call clear twice even on larger targets. -
> 
> https://reviewboard.mozilla.org/r/100880/#review101560

Please send a PR to https://github.com/mozilla/angle.
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/82b7028a88c7
(flattened) - Mark read/draw calls better. - r=daoshengmu
https://hg.mozilla.org/mozilla-central/rev/82b7028a88c7
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: