Bug 1325733 (flattened) - Mark read/draw calls better. - r=daoshengmu

Includes:
* ANGLE needs to call clear twice even on larger targets. - r=daoshengmu